refactored swagger.yml. simplifying schema. modified accessor methods in internal/main.go accordingly.
